# Zammad-MCP

./: .codacy.yaml  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  mise.toml  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: codacy.yml  docker-publish.yml  security-scan.yml  sync-labels.yml  tests.yml
docs/dev/: renovate-and-branch-rules.md
mcp_zammad/: __main__.py  client.py  config.py  logging_config.py  models.py  server.py
tests/: conftest.py  test_client.py  test_client_methods.py  test_config.py  test_expand_param_fix.py  test_main.py  test_server.py
tests/integration/: test_http_transport.py
